major bump 0.2.0, add parse - turn websites into any format, add more dynamic content fetching with scrape, minor updates to params for scrape/crawl - huge improvements
